--- a/MCAPI/MCAPI.csproj
+++ b/MCAPI/MCAPI.csproj
@@ -111,20 +111,23 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DataMatchUploadController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\CustomFields.cs" />
+    <Compile Include="Models\DataMatchUploadResponse.cs" />
+    <Compile Include="Models\DataMatchUploadRequest.cs" />
     <Compile Include="Models\DataMatchUploadResponseBody.cs" />
     <Compile Include="Models\DataMatchUploadRequestBody.cs" />
     <Compile Include="Models\ErrorData.cs" />
     <Compile Include="Models\DMUResponse.cs" />
-    <Compile Include="Models\DataMatchUploadResponse.cs" />
+    <Compile Include="Models\DataMatchUploadResponse_old.cs" />
     <Compile Include="Models\Interfaces\IDataMatchUploadService.cs" />
     <Compile Include="Models\LinkCompliance.cs" />
     <Compile Include="Models\Linking.cs" />
+    <Compile Include="Models\Details.cs" />
+    <Compile Include="Models\Header.cs" />
     <Compile Include="Models\ResponseDetails.cs" />
     <Compile Include="Models\RequestDetails.cs" />
     <Compile Include="Models\ResponseHeader.cs" />
